@@ -27,7 +27,8 @@
    "prereqs" : {
       "configure" : {
          "requires" : {
-            "ExtUtils::MakeMaker" : "0"
+            "ExtUtils::MakeMaker" : "0",
+            "File::ShareDir::Install" : "0.06"
          }
       },
       "runtime" : {
@@ -36,8 +37,11 @@
             "DBIx::Class::Candy" : "0",
             "DateTime" : "0",
             "DateTime::Format::ISO8601" : "0",
+            "File::Share" : "0",
             "Import::Base" : "0.012",
             "Log::Any" : "1.045",
+            "Path::Tiny" : "0.072",
+            "SQL::Translator" : "0.11018",
             "perl" : "5.024",
             "strict" : "0",
             "warnings" : "0"
@@ -53,7 +57,6 @@
             "File::Spec" : "0",
             "IO::Handle" : "0",
             "IPC::Open3" : "0",
-            "SQL::Translator" : "0.11018",
             "Test::Lib" : "0",
             "Test::More" : "1.001005"
          }
@@ -62,39 +65,47 @@
    "provides" : {
       "CPAN::Testers::Schema" : {
          "file" : "lib/CPAN/Testers/Schema.pm",
-         "version" : "0.005"
+         "version" : "0.006"
       },
       "CPAN::Testers::Schema::Base" : {
          "file" : "lib/CPAN/Testers/Schema/Base.pm",
-         "version" : "0.005"
+         "version" : "0.006"
       },
       "CPAN::Testers::Schema::Result::LatestIndex" : {
          "file" : "lib/CPAN/Testers/Schema/Result/LatestIndex.pm",
-         "version" : "0.005"
+         "version" : "0.006"
       },
       "CPAN::Testers::Schema::Result::Release" : {
          "file" : "lib/CPAN/Testers/Schema/Result/Release.pm",
-         "version" : "0.005"
+         "version" : "0.006"
       },
       "CPAN::Testers::Schema::Result::ReleaseStat" : {
          "file" : "lib/CPAN/Testers/Schema/Result/ReleaseStat.pm",
-         "version" : "0.005"
+         "version" : "0.006"
       },
       "CPAN::Testers::Schema::Result::Stats" : {
          "file" : "lib/CPAN/Testers/Schema/Result/Stats.pm",
-         "version" : "0.005"
+         "version" : "0.006"
+      },
+      "CPAN::Testers::Schema::Result::TestReport" : {
+         "file" : "lib/CPAN/Testers/Schema/Result/TestReport.pm",
+         "version" : "0.006"
       },
       "CPAN::Testers::Schema::Result::Upload" : {
          "file" : "lib/CPAN/Testers/Schema/Result/Upload.pm",
-         "version" : "0.005"
+         "version" : "0.006"
       },
       "CPAN::Testers::Schema::ResultSet::Release" : {
          "file" : "lib/CPAN/Testers/Schema/ResultSet/Release.pm",
-         "version" : "0.005"
+         "version" : "0.006"
+      },
+      "CPAN::Testers::Schema::ResultSet::TestReport" : {
+         "file" : "lib/CPAN/Testers/Schema/ResultSet/TestReport.pm",
+         "version" : "0.006"
       },
       "CPAN::Testers::Schema::ResultSet::Upload" : {
          "file" : "lib/CPAN/Testers/Schema/ResultSet/Upload.pm",
-         "version" : "0.005"
+         "version" : "0.006"
       }
    },
    "release_status" : "stable",
@@ -110,7 +121,7 @@
       },
       "x_IRC" : "irc://irc.perl.org/#cpantesters-discuss"
    },
-   "version" : "0.005",
+   "version" : "0.006",
    "x_authority" : "cpan:PREACTION",
    "x_serialization_backend" : "Cpanel::JSON::XS version 3.0216"
 }
