@@ -2,8 +2,11 @@ requires "DBIx::Class" => "0";
 requires "DBIx::Class::Candy" => "0";
 requires "DateTime" => "0";
 requires "DateTime::Format::ISO8601" => "0";
+requires "File::Share" => "0";
 requires "Import::Base" => "0.012";
 requires "Log::Any" => "1.045";
+requires "Path::Tiny" => "0.072";
+requires "SQL::Translator" => "0.11018";
 requires "perl" => "5.024";
 requires "strict" => "0";
 requires "warnings" => "0";
@@ -14,7 +17,6 @@ on 'test' => sub {
   requires "File::Spec" => "0";
   requires "IO::Handle" => "0";
   requires "IPC::Open3" => "0";
-  requires "SQL::Translator" => "0.11018";
   requires "Test::Lib" => "0";
   requires "Test::More" => "1.001005";
 };
@@ -25,4 +27,5 @@ on 'test' => sub {
 
 on 'configure' => sub {
   requires "ExtUtils::MakeMaker" => "0";
+  requires "File::ShareDir::Install" => "0.06";
 };
